<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:background="@color/lightviolet"
            android:text="@string/review_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="123dp"
            android:layout_height="23dp"
            android:text="@string/review_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="269dp"
            android:layout_height="46dp"
            android:layout_marginBottom="28dp"
            android:background="#00000000"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:fontFamily="sans-serif"
                android:text="@string/radioButton1"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:fontFamily="sans-serif"
                android:text="@string/radioButton2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButton1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.564" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:fontFamily="sans-serif"
                android:text="@string/radioButton3"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButton2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:fontFamily="sans-serif"
                android:text="@string/radioButton4"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButton3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:fontFamily="sans-serif"
                android:text="@string/radioButton5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>